<resources>
    <string name="app_name">Game</string>
    <string name="myname">Rita Cristina</string>
    <string name="gameboard">Game Board</string>
    <string name="option1">Razoavél</string>
    <string name="satisfatoria">Satisfatória</string>
    <string name="submeter">Submeter</string>
    <string name="feedback">Deixe aqui o seu feedback. Obrigado.</string>
    <string name="start">Start</string>
    <string name="exit">Exit Game</string>
    <string name="feedbackbutton">Feedback</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
</resources>
