<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="actions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="search"
        android:orderInCategory="200"

        app:showAsAction="ifRoom"
        />
</menu>